--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.israelc.cosettur"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     compile 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation files('src/test/java/ksoap2-android-2.5.2.jar')
+    compile 'com.paypal.sdk:paypal-android-sdk:2.14.4'
 }
