--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo"
-        android:label="COSSETURAPP"
-        android:roundIcon="@drawable/logo"
+        android:icon="@drawable/loc"
+        android:label="CosetturApps"
+        android:roundIcon="@drawable/loc"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
