--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation files('src/test/java/ksoap2-android-2.5.2.jar')
-    compile 'com.paypal.sdk:paypal-android-sdk:2.14.4'
+    implementation 'com.paypal.sdk:paypal-android-sdk:2.14.4'
 }
