--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation files('src/test/java/ksoap2-android-2.5.2.jar')
     implementation 'com.paypal.sdk:paypal-android-sdk:2.14.4'
+    implementation 'com.itextpdf:itextg:5.5.10'
 }
