--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     implementation 'com.paypal.sdk:paypal-android-sdk:2.14.4'
     implementation 'com.itextpdf:itextg:5.5.10'
     compile 'com.commit451:PhotoView:1.2.4'
+    implementation files('src/main/java/activation.jar')
+    implementation files('src/main/java/additionnal.jar')
+    implementation files('src/main/java/mail.jar')
 }
