--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation files('src/test/java/ksoap2-android-2.5.2.jar')
     implementation 'com.paypal.sdk:paypal-android-sdk:2.14.4'
     implementation 'com.itextpdf:itextg:5.5.10'
-    compile 'com.commit451:PhotoView:1.2.4'
+    implementation 'com.commit451:PhotoView:1.2.4'
     implementation files('src/main/java/activation.jar')
     implementation files('src/main/java/additionnal.jar')
     implementation files('src/main/java/mail.jar')
